syntax = "proto3";

                 package wedInvGift;
service WedInvGiftService {
 rpc createWedInvGift (WedInvGiftCreateInput) returns (WedInvGift) {}
rpc wedInvGifts (findManyParams) returns (stream WedInvGift) {}
rpc wedInvGift (WedInvGiftWhereUniqueInput) returns (WedInvGift) {}
rpc updateWedInvGift (WedInvGiftUpdateInput) returns (WedInvGift) {}
rpc deleteWedInvGift (WedInvGiftWhereUniqueInput) returns (WedInvGift) {} 
 }
message WedInvGiftCreateInput {
string accountName = 1;
string accountNo = 2;
string accountPhoto = 3;
string createdAt = 4;
string details = 5;
string id = 6;
string updatedAt = 7;
};
message WedInvGift {
string accountName = 1;
string accountNo = 2;
string accountPhoto = 3;
string createdAt = 4;
string details = 5;
string id = 6;
string updatedAt = 7;
};
message WedInvGiftWhereUniqueInput {
string accountName = 1;
string accountNo = 2;
string accountPhoto = 3;
string createdAt = 4;
string details = 5;
string id = 6;
string updatedAt = 7;
};
message WedInvGiftUpdateInput {
string accountName = 1;
string accountNo = 2;
string accountPhoto = 3;
string createdAt = 4;
string details = 5;
string id = 6;
string updatedAt = 7;
};
message findManyParams {

};